# beatify

./: .gitignore  .ruff.toml  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DESIGN.md  GAME_LOGIC_ANALYSIS.md  HELLO.md  HELLO_WORLD.md  LICENSE  Makefile  README.md  RELEASE_NOTES_1.3.0.md  RELEASE_NOTES_v2.3.2.md  conftest.py  eslint.config.js  hacs.json  index.html  node_modules  package-lock.json  package.json  pyproject.toml  requirements_test.txt  robots.txt  ruff.toml  sitemap.xml  vitest.config.js
.agentforce/tasks/: 1_brief.md  1_prompt.md
.github/workflows/: pages.yml  test.yml  validate.yml  version-bump.yml
_bmad-output/: architecture.md  atdd-checklist-epic-1.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2025-12-18.md  prd.md  project-context.md  test-design-system.md  test-review.md
_bmad-output/analysis/: brainstorming-session-2025-12-16.md
_bmad-output/implementation-artifacts/: 1-1-initialize-project-from-starter-template.md  1-2-hacs-installation-and-integration-setup.md  1-3-media-player-validation.md  1-3-music-assistant-detection.md  1-4-media-player-and-playlist-discovery.md  1-5-admin-page-access.md  3-2-name-entry-and-join.md  (+18 more)
cf-workers/: beatify-api.js
css/: style.css
docs/: ARCHITECTURE.md  MARKETING_STRATEGY.md  PLAYLIST_ENRICHMENT_RUNBOOK.md  RELEASE-NOTES-1.5.0.md  RELEASE-NOTES-2.1.0.md  YOUTUBE_OUTREACH_EMAILS.md  ci.md  index.html  llm-playlist-generator.md  provider-coverage.md  release-3.3.0.md  release-notes-v3.4.4-rc1.md  release-notes-v3.4.5-rc2.md  release-notes-v4.1.1.md  release-notes-v4.1.2.md  release-notes-v4.1.3.md  robots.txt
scripts/: backfill_tidal.py  build.js  build.mjs  burn-in.sh  ci-local.sh  enrich_playlists.py  playlist_schema.json  size-report.js  test-changed.sh  validate_playlists.py
tests/: README.md  __init__.py  conftest.py  test_scoring.py  test_state.py
(+369 files in other folders)
